@@ -1,8 +1,12 @@
 package org.manazeak.manazeak.manager.library.track;
 
+import lombok.RequiredArgsConstructor;
 import org.manazeak.manazeak.entity.dto.library.track.TrackCompleteInfoDbDto;
 import org.manazeak.manazeak.entity.dto.library.track.TrackCompleteInfoDto;
+import org.manazeak.manazeak.entity.dto.library.track.TrackQueueInfoDto;
+import org.manazeak.manazeak.entity.dto.library.track.TrackWithPartialPerformerDto;
 import org.manazeak.manazeak.exception.MzkRuntimeException;
+import org.manazeak.manazeak.mapper.library.track.TrackMapper;
 import org.springframework.stereotype.Component;
 
 import java.util.ArrayList;
@@ -13,7 +17,10 @@ import java.util.List;
  * displayable on the UI.
  */
 @Component
-public class TrackCompleteConverterManager {
+@RequiredArgsConstructor
+public class TrackConverterManager {
+
+    private final TrackMapper trackMapper;
 
     /**
      * Get the last track in the track table.
@@ -25,7 +32,30 @@ public class TrackCompleteConverterManager {
         if (tracks.isEmpty()) {
             throw new MzkRuntimeException("The list of track cannot be empty.");
         }
-        return tracks.get(tracks.size() - 1);
+        return tracks.getLast();
+    }
+
+    /**
+     * Convert the partial track into a track to be displayed into the queue.
+     *
+     * @param tracks The track information coming from the database.
+     * @return The list of elements.
+     */
+    public List<TrackQueueInfoDto> convertTrackPartialPerformerToTrackQueueInfo(List<TrackWithPartialPerformerDto> tracks) {
+        List<TrackQueueInfoDto> convertedTracks = new ArrayList<>();
+        Long lastId = 0L;
+        for (TrackWithPartialPerformerDto track : tracks) {
+            // Converting the track if it hasn't been converted.
+            if (!lastId.equals(track.trackId())) {
+                lastId = track.trackId();
+                convertedTracks.add(trackMapper.trackWithPartialPerformerToTrackQueueInfo(track));
+            } else {
+                // Adding the performer.
+                convertedTracks.getLast().getPerformers().add(track.performer());
+            }
+        }
+
+        return convertedTracks;
     }
 
     /**
@@ -39,7 +69,7 @@ public class TrackCompleteConverterManager {
         List<TrackCompleteInfoDto> tracks = new ArrayList<>();
         // Iterating through the tracks of the database and building objects.
         for (TrackCompleteInfoDbDto dbTrack : dbTracks) {
-            // If the track is a new one resetting the last ids.
+            // If the track is new, resetting the last ids.
             if (!lastTrackId.equals(dbTrack.getTrackId())) {
                 tracks.add(dbTrack.getTrackBasicInfo());
                 lastTrackId = dbTrack.getTrackId();
